@@ -44,7 +44,6 @@
 #include "app.h"
 #include "cur-proj.h"
 #include "err-throw.h"
-#include "file-io.h"
 #include "gtt.h"
 #include "gconf-io.h"
 #include "log.h"
